--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 
-<app-header></app-header>
-<app-content></app-content>
+<!-- <app-header></app-header> -->
+<!-- <app-server></app-server> -->
+<!-- <app-content></app-content>
 
 <app-footer></app-footer>
-     
+      -->
+      
+<!-- =========type script============ -->
+<app-typescript></app-typescript>
